# demo_gtest

./: CMakeLists.txt  Readme.md  factorial.c  foo.h  foo_unittest.cc  footest  gcd.c  gtest.mk
gtest/lib/pkgconfig/: gtest.pc
